k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: deploy-service

spec:
  selector:
    app: flask-app

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
